--- a/paper/sample.bib
+++ b/paper/sample.bib
@@ -14,6 +14,14 @@
   year      = {2014},
   url       = {http://researcher.ibm.com/researcher/files/us-ytian/p52.pdf}
 }
+@article{breslow-method,
+  author    = {N. Breslow},
+  title     = {Covariance Analysis of Survival Data under the Proportional Hazards Model},
+  journal   = {International Statistical Institute (ISI)},
+  year      = {1974},
+  DOI       = {10.2307/1402659},
+  url       = {http://www.jstor.org/stable/1402659}
+}
 
 @book{big_data_analytics_spark,
   author    = {Mohammed Guller},
