Added partial likelihood formulae

--- a/paper/Survival_analysis_over_stackoverflow.tex
+++ b/paper/Survival_analysis_over_stackoverflow.tex
@@ -891,6 +891,9 @@
 
   \section{Kaplan-Meier Estimator model}
 
+    \subsection{The Kaplan-Meier Estimator}
+
+
     Most survival analysis studies start with a non-parametric method as they are simple and fast, and provide with an intuitive graphical form of understanding the data. The two main non-parametric methods, as mentioned before are the Life Tables and the Kaplan-Meier Estimator model. The first is more adequated for large datasets and when the time is not measured with precision. On the other hand, the KM Estimates method is great for when the time is precisely measured, and is widely used, more than the life tables.
 
     The main idea of the KM method is to estimate the survival function at a time 't' $\widehat{S}(t)$, which is the probability of a subject surviving until this time 't'. It can be calculated by obtaining the conditional probability of not experiencing the event on time 't', not having experienced it in previous failure times:
