--- a/paper/sample.bib
+++ b/paper/sample.bib
@@ -75,3 +75,7 @@
   title     = {Material docente de la Unidad de Bioestadística Clínica},
   url       = {http://www.hrc.es/bioest}
 }
+@online{meta-stackexchange-data-structure,
+  title     = {StackExchange data schemas},
+  url       = {https://meta.stackexchange.com/questions/2677/database-schema-documentation-for-the-public-data-dump-and-sede}
+}
